# rust-migration

./: .dockerignore  .env.example  .gitignore  BALANCE_FIX.md  CHANGELOG.md  COMMIT_MESSAGE.md  Cargo.toml  Dockerfile  FIX_SUMMARY.md  PROVIDERS.md  README.md  deploy-1c1g.sh  docker-compose.1panel.yml  docker-compose.hub.yml  docker-compose.yml  git_commit.bat  test_balance.bat  test_balance.md
.github/workflows/: docker-build.yml
docs/: 1PANEL-DEPLOY.md  ADMIN-FEATURES.md  ADMIN-SETUP.md  FIXES-SUMMARY.md  FRONTEND-INTEGRATION.md  ISSUES.md  MIGRATION.md  OPERATIONS.md  OPTIMIZATION-CHECKLIST.md  ORACLE-1C1G-OPTIMIZATION.md  PROGRESS.md  QUICKSTART.md  README.md  SELF-CHECK-REPORT.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tokens.css  vite.config.ts
frontend/src/: App.vue  config.ts  main.ts  style.css  types.ts  workbench.css
frontend/src/components/: AccountPanel.vue  AdminUserPanel.vue  (+6 more)
migrations/: 003_add_owner_id.sql  20260611_init.sql
public/: index.html
public/assets/: index-2ZTKuRYt.css  index-3Kiv7jxh.js  index-3kwDS_em.css  index-4e9BznYS.js  index-BDw3V7d5.css  index-BOKgTNMe.css  index-BTvviGwZ.js  index-BUcSmz3A.js  index-BamDdJe3.css  index-BeR7Ul-q.css  index-BkOeSeB1.js  index-BtnxG_yS.js  index-Bu03T6v3.js  index-Bv6QiW1k.css  index-C7MM-bkb.css  index-CAHA5hiD.js  index-CAWtI0HL.js  index-CN8JRVQh.css  index-CNDMd_Db.css  index-COi9R6Pz.css  index-CSp9BTbs.css  index-CUEER0DM.js  index-CVN30Yvm.css  index-CWTG9gi2.js  index-C_DnZd5d.css  index-ClcYKlqJ.css  index-Cnq7Kkh9.css  index-CpDI0lAX.css  index-Cqoaoo4q.js  index-CwVe7LYn.js  index-Cx1riPdh.css  index-CxbltVQV.js  index-Cy0x6K6Z.css  index-CzpkatJQ.js  index-D1cHTEt1.css  index-D3KkSfoO.js  index-D468fmA2.css  index-D6kUFoPF.js  index-DBNw795a.js  index-DDmOaG73.js  (+23 more)
src/: auth_middleware.rs  crypto.rs  db.rs  error.rs  main.rs  main.rs.backup  models.rs  security.rs
src/db/: accounts.rs  mod.rs  notification.rs  runs.rs  sessions.rs  settings.rs  types.rs  users.rs
src/models/: notification.rs
src/routes/: accounts.rs  admin.rs  auth.rs  checkin_runs.rs  health.rs  import_export.rs  mod.rs  notifications.rs  server_time.rs  settings.rs  statistics.rs
src/services/: mod.rs  notification.rs  scheduler.rs
(+16 files in other folders)
