[package]
name = "ai-hub-rust"
version = "0.1.0"
edition = "2021"

[dependencies]`r`n# Lock to avoid edition2024 requirement`r`nbase64 = "0.21"
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
ring = "0.17"
base64 = "0.22"
bcrypt = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async & scheduling
tokio-cron-scheduler = "0.10"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

