[package]
name = "ai-hub-rust"
version = "2.3.2"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
ring = "0.17"
base64 = "0.21"
bcrypt = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }

# Async & scheduling
tokio-cron-scheduler = "0.10"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Random (防判定：随机 UA / 随机间隔 / 打乱顺序)
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
